[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/Health Bar/Back.png" type="Texture" id=1]
[ext_resource path="res://Art/Health Bar/Over.png" type="Texture" id=2]
[ext_resource path="res://Art/Health Bar/Front.png" type="Texture" id=3]
[ext_resource path="res://Health Bar.gd" type="Script" id=4]

[node name="Health_Bar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health_Bar_red" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
value = 99.0
texture_under = ExtResource( 1 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 1, 0.211765, 0.211765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health_Bar" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture_under = ExtResource( 1 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.172549, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]

[node name="PulseTween" type="Tween" parent="."]
